<resources>
    <string name="app_name">Kenny\'s App Portfolio</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About Me</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="buildit">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">My Project</string>
</resources>
