<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@color/lighter_blue"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:layout_margin="12dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_margin="6dp"
                android:id="@+id/about_me"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify"
                android:layout_margin="6dp"
                android:id="@+id/spotify_project"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores"
                android:layout_margin="6dp"
                android:id="@+id/scores_project"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:layout_margin="6dp"
                android:id="@+id/library_project"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buildit"
                android:layout_margin="6dp"
                android:id="@+id/built_project"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz"
                android:layout_margin="6dp"
                android:id="@+id/xyz_project"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:layout_margin="6dp"
                android:id="@+id/capstone_project"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
